--- a/app/src/main/res/drawable/rectangle_fill_light_yellow_radius_20.xml
+++ b/app/src/main/res/drawable/rectangle_fill_light_yellow_radius_20.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners
-        android:radius="5dp"/>
+        android:radius="20dp"/>
 
     <solid
-        android:color="#f8f8f8"/>
+        android:color="@color/subYellow"/>
 
 </shape>
