--- a/app/src/main/res/layout/activity_search_place.xml
+++ b/app/src/main/res/layout/activity_search_place.xml
@@ -45,11 +45,12 @@
             android:textSize="16sp" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="36dp"
         android:layout_marginTop="48dp"
+        android:orientation="horizontal"
         android:background="@drawable/rectangle_fill_light_gray_rounded_15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,25 +66,21 @@
             android:src="@drawable/ic_alert_circle" />
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:layout_toEndOf="@id/iv_alert_circle"
-            android:fontFamily="@font/roboto_medium"
             android:letterSpacing="-0.03"
             android:lineSpacingExtra="9sp"
-            android:autoSizeTextType="uniform"
             android:text="@string/tv_alert_info"
             android:textColor="#a3a3a3"
+            android:textSize="15sp"
             android:textStyle="normal" />
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
