--- a/app/src/main/res/layout/activity_register_place.xml
+++ b/app/src/main/res/layout/activity_register_place.xml
@@ -22,9 +22,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="68dp"
+        android:fontFamily="@font/roboto_bold"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="9sp"
-        android:text="기본정보를 입력해주세요."
+        android:text="매장정보를 확인해주세요."
         android:textColor="@color/customBlack"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -32,14 +33,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_place_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/roboto_medium"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
-        android:text="성명"
+        android:text="매장명"
         android:textColor="#6f6f6f"
         android:textSize="16sp"
         android:textStyle="normal"
@@ -47,171 +48,208 @@
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     <RelativeLayout
-        android:id="@+id/rl_first_name"
-        android:layout_width="110dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/rectangle_custom_white_radius"
-        app:layout_constraintStart_toStartOf="@id/tv_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_name">
-
-        <EditText
-            android:id="@+id/et_first_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="14dp"
-            android:background="@null"
-            android:fontFamily="@font/roboto_medium"
-            android:hint="성"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="13sp"
-            android:textColor="@color/customBlack"
-            android:textColorHint="@color/hintTxtColor"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_name"
+        android:id="@+id/rl_place_name"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginHorizontal="36dp"
         android:layout_marginTop="14dp"
-        android:layout_marginEnd="36dp"
         android:background="@drawable/rectangle_custom_white_radius"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/rl_first_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_name">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_place_name">
 
-        <EditText
-            android:id="@+id/et_name"
+        <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
-            android:background="@null"
-            android:fontFamily="@font/roboto_medium"
-            android:hint="이름"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:textColor="@color/customBlack"
-            android:textColorHint="@color/hintTxtColor"
             android:textSize="16sp"
-            android:textStyle="normal" />
+            android:textStyle="bold"
+            tools:text="서플라이 첨담점" />
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv_age"
+        android:id="@+id/tv_place_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/roboto_medium"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
-        android:text="나이"
+        android:text="업종"
         android:textColor="#6f6f6f"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/rl_first_name" />
+        app:layout_constraintTop_toBottomOf="@id/rl_place_name" />
 
     <RelativeLayout
-        android:id="@+id/rl_age"
+        android:id="@+id/rl_place_type"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/rectangle_custom_white_radius"
-        app:layout_constraintEnd_toEndOf="@id/rl_name"
-        app:layout_constraintStart_toStartOf="@id/tv_age"
-        app:layout_constraintTop_toBottomOf="@id/tv_age">
+        app:layout_constraintEnd_toEndOf="@id/rl_place_name"
+        app:layout_constraintStart_toStartOf="@id/rl_place_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_place_type">
 
-        <EditText
-            android:id="@+id/et_age"
+        <TextView
+            android:id="@+id/tv_type"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
-            android:background="@null"
-            android:fontFamily="@font/roboto_medium"
-            android:hint="출생년도(YYYY)"
-            android:maxLength="4"
-            android:inputType="number"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:textColor="@color/customBlack"
-            android:textColorHint="@color/hintTxtColor"
             android:textSize="16sp"
-            android:textStyle="normal" />
+            android:textStyle="bold"
+            tools:text="카페" />
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv_sex"
+        android:id="@+id/tv_place_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/roboto_medium"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
-        android:text="성별"
+        android:text="매장위치"
         android:textColor="#6f6f6f"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/rl_age" />
+        app:layout_constraintTop_toBottomOf="@id/rl_place_type" />
 
     <RelativeLayout
-        android:id="@+id/rl_man"
+        android:id="@+id/rl_location_main"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="14dp"
-        android:layout_marginEnd="6dp"
-        android:background="@drawable/btn_selecter_sex"
-        app:layout_constraintEnd_toStartOf="@id/rl_woman"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="@id/tv_sex"
-        app:layout_constraintTop_toBottomOf="@id/tv_sex">
+        android:layout_marginHorizontal="36dp"
+        android:background="@drawable/rectangle_custom_white_radius"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_place_location"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="@font/roboto_bold"
-            android:gravity="center_horizontal"
+            android:id="@+id/tv_location_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="14dp"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
-            android:text="남자"
-            android:textColor="#343434"
+            android:textColor="@color/customBlack"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="광주 광산구 임방울대로826번길 47"/>
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/rl_woman"
+        android:id="@+id/rl_location_sub"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/btn_selecter_sex"
-        app:layout_constraintEnd_toEndOf="@id/rl_age"
-        app:layout_constraintStart_toEndOf="@id/rl_man"
-        app:layout_constraintTop_toBottomOf="@id/tv_sex">
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="36dp"
+        android:background="@drawable/rectangle_custom_white_radius"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rl_location_main"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="@font/roboto_bold"
-            android:gravity="center_horizontal"
+        <EditText
+            android:id="@+id/tv_location_sub"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:textStyle="normal"
+            android:textSize="16sp"
+            android:textColorHint="@color/hintTxtColor"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
-            android:text="여자"
-            android:textColor="#343434"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_marginHorizontal="16dp"
+            android:hint="상세주소 입력"
+            android:textColor="@color/customBlack"
+            />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_business_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/roboto_medium"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="13sp"
+        android:text="사업자 인증"
+        android:textColor="#6f6f6f"
+        android:textSize="16sp"
+        android:textStyle="normal"
+        app:layout_constraintStart_toStartOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/rl_location_sub" />
+
+    <RelativeLayout
+        android:id="@+id/rl_business_num"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/rectangle_custom_white_radius"
+        android:layout_marginHorizontal="36dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_business_num"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <EditText
+            android:id="@+id/et_business_num"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:singleLine="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:hint="사업자 등록번호 10자리 입력"
+            android:inputType="textPassword"
+            android:background="@null"
+            android:layout_marginEnd="56dp"
+            android:layout_alignParentEnd="true"
+            android:letterSpacing="-0.01"
+            android:lineSpacingExtra="13sp"
+            android:textColor="@color/customBlack"
+            android:textColorHint="#c8c8c8"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
+        <ImageView
+            android:id="@+id/iv_num_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_checked_normal"
+            android:layout_marginEnd="16dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/warning_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="대표자명과 회원님의 이름이 일치하지 않습니다."
+        android:fontFamily="@font/roboto_medium"
+        android:textStyle="normal"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:textSize="12sp"
+        android:textColor="#ff3b30"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="17sp"
+        app:layout_constraintStart_toStartOf="@id/rl_business_num"
+        app:layout_constraintTop_toBottomOf="@id/rl_business_num"
+        />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -223,7 +261,7 @@
         android:background="@drawable/btn_disable_yellow_fill_rounded"
         android:fontFamily="@font/roboto_bold"
         android:stateListAnimator="@null"
-        android:text="회원가입 완료"
+        android:text="다음"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
