[FEAT] 전화번호 입력 시 자동 공백 추가 logic 구현 완료

--- a/app/src/main/res/layout/fragment_input_phone.xml
+++ b/app/src/main/res/layout/fragment_input_phone.xml
@@ -52,9 +52,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="56dp"
             android:background="@null"
-            android:inputType="number"
             android:maxLength="13"
-            android:hint="-없이 번호 입력"
+            android:inputType="number"
+            android:hint="@string/hint_phone"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:singleLine="true"
