--- a/app/src/main/res/layout/fragment_agreement.xml
+++ b/app/src/main/res/layout/fragment_agreement.xml
@@ -200,7 +200,7 @@
         android:stateListAnimator="@null"
         android:textStyle="bold"
         android:textSize="16sp"
-        android:clickable="false"
+        android:enabled="false"
         android:fontFamily="@font/roboto_bold"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
