--- a/app/src/main/res/layout/fragment_input_phone.xml
+++ b/app/src/main/res/layout/fragment_input_phone.xml
@@ -54,12 +54,11 @@
             android:background="@null"
             android:maxLength="13"
             android:inputType="number"
-            android:hint="@string/hint_phone"
+            android:hint="-없이 번호입력"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:singleLine="true"
             android:textColor="@color/customBlack"
-            android:textColorHint="#c8c8c8"
             android:textSize="16sp"
             android:textStyle="normal" />
 
@@ -70,9 +69,11 @@
             android:layout_alignParentEnd="true"
             android:layout_marginVertical="12dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/rectangle_fill_white_radius_gray_15">
+            android:clickable="false"
+            android:background="@drawable/rectangle_fill_light_gray_rounded_10">
 
             <TextView
+                android:id="@+id/tv_certify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -144,7 +145,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginVertical="12dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/rectangle_fill_white_radius_gray_15">
+            android:background="@drawable/rectangle_fill_light_gray_rounded_10">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -168,6 +169,7 @@
         android:id="@+id/btn_next"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:enabled="false"
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/btn_disable_yellow_fill_rounded"
