--- a/app/src/main/res/layout/activity_search_place.xml
+++ b/app/src/main/res/layout/activity_search_place.xml
@@ -122,10 +122,12 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_place"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="30dp"
+            android:clipToPadding="false"
             android:paddingHorizontal="36dp"
             android:orientation="horizontal"
             tools:listitem="@layout/item_rv_search_result"
