--- a/app/src/main/res/layout/activity_search_place.xml
+++ b/app/src/main/res/layout/activity_search_place.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.manager.register.SearchPlaceActivity">
+    tools:context=".ui.register.manager.SearchPlaceActivity">
 
     <ImageButton
         android:id="@+id/iv_back"
