--- a/app/src/main/res/layout/fragment_input_info.xml
+++ b/app/src/main/res/layout/fragment_input_info.xml
@@ -126,21 +126,19 @@
         app:layout_constraintStart_toStartOf="@id/tv_age"
         app:layout_constraintTop_toBottomOf="@id/tv_age">
 
-        <EditText
-            android:id="@+id/et_age"
+        <TextView
+            android:id="@+id/tv_input_age"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
             android:background="@null"
             android:fontFamily="@font/roboto_medium"
-            android:hint="출생년도(YYYY)"
-            android:maxLength="4"
+            android:text="출생년도\u0028YYYY\u0029"
             android:inputType="number"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
-            android:textColor="@color/customBlack"
-            android:textColorHint="@color/hintTxtColor"
+            android:textColor="@color/hintTxtColor"
             android:textSize="16sp"
             android:textStyle="normal" />
     </RelativeLayout>
