--- a/app/src/main/res/layout/dialog_fragment_age.xml
+++ b/app/src/main/res/layout/dialog_fragment_age.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="374dp"
+    android:layout_height="324dp"
     android:background="@null">
 
     <TextView
@@ -25,7 +25,6 @@
         android:layout_width="0dp"
         android:layout_height="175dp"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_cancel"
@@ -40,6 +39,7 @@
         <NumberPicker
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginVertical="25dp"
             android:id="@+id/numberPicker"
             android:theme="@style/AgePicker"/>
 
