--- a/app/src/main/res/layout/activity_register_place.xml
+++ b/app/src/main/res/layout/activity_register_place.xml
@@ -58,17 +58,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_place_name">
 
-        <TextView
-            android:id="@+id/tv_name"
+        <EditText
+            android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
+            android:background="@null"
+            android:hint="매장명과 지점 입력"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
+            android:textColorHint="@color/hintTxtColor"
             android:textColor="@color/customBlack"
             android:textSize="16sp"
-            android:textStyle="bold"
             tools:text="서플라이 첨담점" />
     </RelativeLayout>
 
@@ -99,16 +101,27 @@
 
         <TextView
             android:id="@+id/tv_type"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
+            android:background="@null"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
-            android:textColor="@color/customBlack"
+            android:text="업종 선택"
+            android:textColor="@color/hintTxtColor"
             android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="카페" />
+            android:textStyle="normal" />
+
+        <ImageButton
+            android:id="@+id/ibtn_vert"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="16dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_chevron_down" />
     </RelativeLayout>
 
     <TextView
@@ -130,127 +143,54 @@
         android:id="@+id/rl_location_main"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginTop="14dp"
         android:layout_marginHorizontal="36dp"
+        android:layout_marginTop="14dp"
         android:background="@drawable/rectangle_custom_white_radius"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_place_location"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tv_place_location">
 
-        <TextView
-            android:id="@+id/tv_location_main"
+        <EditText
+            android:id="@+id/et_location_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
+            android:background="@null"
+            android:hint="도로명이나 지번주소 입력"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
+            android:textColorHint="@color/hintTxtColor"
             android:textColor="@color/customBlack"
             android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="광주 광산구 임방울대로826번길 47"/>
+            tools:text="광주 광산구 임방울대로826번길 47" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/rl_location_sub"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginTop="12dp"
         android:layout_marginHorizontal="36dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/rectangle_custom_white_radius"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rl_location_main"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/rl_location_main">
 
         <EditText
-            android:id="@+id/tv_location_sub"
+            android:id="@+id/et_location_sub"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@null"
-            android:textStyle="normal"
-            android:textSize="16sp"
-            android:textColorHint="@color/hintTxtColor"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="13sp"
             android:layout_marginHorizontal="16dp"
-            android:hint="상세주소 입력"
-            android:textColor="@color/customBlack"
-            />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/tv_business_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/roboto_medium"
-        android:letterSpacing="-0.01"
-        android:lineSpacingExtra="13sp"
-        android:text="사업자 인증"
-        android:textColor="#6f6f6f"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/rl_location_sub" />
-
-    <RelativeLayout
-        android:id="@+id/rl_business_num"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/rectangle_custom_white_radius"
-        android:layout_marginHorizontal="36dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_business_num"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <EditText
-            android:id="@+id/et_business_num"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:singleLine="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:hint="사업자 등록번호 10자리 입력"
-            android:inputType="textPassword"
             android:background="@null"
-            android:layout_marginEnd="56dp"
-            android:layout_alignParentEnd="true"
+            android:hint="상세주소 입력"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
+            android:textColorHint="@color/hintTxtColor"
             android:textColor="@color/customBlack"
-            android:textColorHint="#c8c8c8"
             android:textSize="16sp"
             android:textStyle="normal" />
-
-        <ImageView
-            android:id="@+id/iv_num_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_checked_normal"
-            android:layout_marginEnd="16dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"/>
-
     </RelativeLayout>
-
-    <TextView
-        android:id="@+id/warning_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="대표자명과 회원님의 이름이 일치하지 않습니다."
-        android:fontFamily="@font/roboto_medium"
-        android:textStyle="normal"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
-        android:textSize="12sp"
-        android:textColor="#ff3b30"
-        android:letterSpacing="-0.01"
-        android:lineSpacingExtra="17sp"
-        app:layout_constraintStart_toStartOf="@id/rl_business_num"
-        app:layout_constraintTop_toBottomOf="@id/rl_business_num"
-        />
-
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_next"
