--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,6 +45,15 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Theme.Albazip.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Albazip.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Albazip.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
 
