[Style] 회원가입 디자인 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:lineSpacingExtra="4sp"
         android:stateListAnimator="@null"
         android:text="회원가입"
-        android:textColor="@color/white"
+        android:textColor="@color/customBlack"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/btn_login"
@@ -65,13 +65,13 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/btn_sub_yellow_fill_rounded"
+        android:background="@drawable/rectangle_fill_light_gray_rounded_15"
         android:fontFamily="@font/roboto_bold"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="4sp"
         android:stateListAnimator="@null"
         android:text="로그인"
-        android:textColor="@color/mainYellow"
+        android:textColor="@color/subTxtColor"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/tv_pw_set"
