--- a/app/src/main/res/layout/fragment_input_info.xml
+++ b/app/src/main/res/layout/fragment_input_info.xml
@@ -62,8 +62,10 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
             android:background="@null"
+            style="@style/EditTextStyle"
             android:fontFamily="@font/roboto_medium"
             android:hint="성"
+            android:singleLine="true"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:textColor="@color/customBlack"
@@ -91,8 +93,10 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
             android:background="@null"
+            style="@style/EditTextStyle"
             android:fontFamily="@font/roboto_medium"
             android:hint="이름"
+            android:singleLine="true"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:textColor="@color/customBlack"
@@ -223,7 +227,7 @@
         android:fontFamily="@font/roboto_bold"
         android:stateListAnimator="@null"
         android:text="회원가입 완료"
-        android:textColor="@color/white"
+        android:textColor="@color/disableTxtColor"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
