--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,8 +63,10 @@
             android:id="@+id/et_input_phone"
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            style="@style/EditTextStyle"
             android:background="@null"
             android:singleLine="true"
+            android:maxLength="13"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -115,8 +117,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:background="@null"
+            style="@style/EditTextStyle"
             android:hint="비밀 번호"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:singleLine="true"
@@ -144,12 +147,13 @@
         android:id="@+id/btn_next"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="다음"
+        android:text="로그인"
         android:background="@drawable/btn_disable_yellow_fill_rounded"
-        android:textColor="@color/white"
+        android:textColor="@color/hintTxtColor"
         android:stateListAnimator="@null"
         android:textStyle="bold"
         android:textSize="16sp"
+        android:enabled="false"
         android:fontFamily="@font/roboto_bold"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
