--- a/app/src/main/res/layout/fragment_input_phone.xml
+++ b/app/src/main/res/layout/fragment_input_phone.xml
@@ -53,6 +53,8 @@
             android:layout_marginEnd="56dp"
             android:background="@null"
             android:maxLength="13"
+            style="@style/EditTextStyle"
+            android:textColorHint="@color/hintTxtColor"
             android:inputType="number"
             android:hint="-없이 번호입력"
             android:letterSpacing="-0.01"
@@ -70,7 +72,7 @@
             android:layout_marginVertical="12dp"
             android:layout_marginEnd="16dp"
             android:clickable="false"
-            android:background="@drawable/rectangle_fill_light_gray_rounded_10">
+            android:background="@drawable/rectangle_fill_light_gray_rounded_5">
 
             <TextView
                 android:id="@+id/tv_certify"
@@ -111,8 +113,9 @@
             android:layout_marginEnd="56dp"
             android:layout_alignParentStart="true"
             android:background="@null"
+            style="@style/EditTextStyle"
             android:hint="인증 번호"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:singleLine="true"
@@ -145,7 +148,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginVertical="12dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/rectangle_fill_light_gray_rounded_10">
+            android:background="@drawable/rectangle_fill_light_gray_rounded_5">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -175,7 +178,8 @@
         android:fontFamily="@font/roboto_bold"
         android:stateListAnimator="@null"
         android:text="다음"
-        android:textColor="@color/white"
+        android:enabled="false"
+        android:textColor="@color/disableTxtColor"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
