--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -20,6 +20,7 @@
            android:layout_height="match_parent">
 
            <ImageButton
+               android:id="@+id/ibtn_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_arrow"
