--- a/app/src/main/res/drawable/rectangle_fill_light_yellow_radius_20.xml
+++ b/app/src/main/res/drawable/rectangle_fill_light_yellow_radius_20.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <stroke
+        android:color="#ffefbc"
+        android:width="2dp"/>
+
     <corners
         android:radius="20dp"/>
 
