--- a/app/src/main/res/layout/activity_bnum.xml
+++ b/app/src/main/res/layout/activity_bnum.xml
@@ -63,11 +63,12 @@
             android:layout_height="20dp"
             android:background="@null"
             android:singleLine="true"
+            android:maxLength="12"
+            android:inputType="number"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="56dp"
             android:layout_alignParentEnd="true"
-            android:inputType="number"
             android:hint="사업자 등록번호 10자리 입력"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
@@ -92,6 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
+        android:visibility="invisible"
         android:text="등록되지 않은 번호입니다."
         android:textColor="@color/waringTxtColor"
         app:layout_constraintStart_toStartOf="@id/rl_bnum_input"
@@ -99,19 +101,16 @@
         app:layout_constraintEnd_toEndOf="@id/rl_bnum_input"
         />
 
-    <FrameLayout
-        android:id="@+id/bnum_frame"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:background="@color/white"
-        app:layout_constraintStart_toStartOf="@id/rl_bnum_input"
-        app:layout_constraintEnd_toEndOf="@id/rl_bnum_input"
-        app:layout_constraintTop_toBottomOf="@id/rl_bnum_input"
-        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:id="@+id/cl_name_input"
+            android:visibility="invisible"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/rl_bnum_input"
+            app:layout_constraintEnd_toEndOf="@id/rl_bnum_input"
+            app:layout_constraintTop_toBottomOf="@id/rl_bnum_input"
+            >
 
         <RelativeLayout
             android:id="@+id/rl_name_input"
@@ -133,7 +132,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="56dp"
                 android:layout_alignParentEnd="true"
-                android:inputType="number"
                 android:hint="대표자명 입력"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="13sp"
@@ -156,6 +154,7 @@
             <TextView
                 android:id="@+id/warning_name_tv"
                 android:layout_width="0dp"
+                android:visibility="invisible"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
@@ -169,8 +168,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </FrameLayout>
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_next"
         android:layout_width="0dp"
@@ -182,7 +179,7 @@
         android:fontFamily="@font/roboto_bold"
         android:stateListAnimator="@null"
         android:text="다음"
-        android:textColor="@color/white"
+        android:textColor="@color/disableTxtColor"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
