--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,7 @@
     tools:context=".src.home.common.HomeActivity">
 
     <ImageButton
+        android:id="@+id/ibtn_setting"
         android:layout_width="24dp"
         android:layout_height="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +22,7 @@
         android:id="@+id/tv_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="유저님 반가워요:)\n포지션을 선택해주세요!"
+        android:text="유저님 반가워요 :)\n포지션을 선택해주세요!"
         android:layout_marginTop="68dp"
         android:layout_marginStart="36dp"
         android:textStyle="bold"
@@ -48,7 +49,7 @@
             android:id="@+id/iv_manager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="14dp"
             android:src="@drawable/illust_manager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +81,7 @@
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="5sp"
             android:text="매장 등록하기"
-            android:textColor="@color/mainYellow"
+            android:textColor="#ff9d00"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +138,7 @@
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="5sp"
             android:text="매장 합류하기"
-            android:textColor="@color/mainYellow"
+            android:textColor="#ff9d00"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
