--- a/app/src/main/res/layout/activity_register_place.xml
+++ b/app/src/main/res/layout/activity_register_place.xml
@@ -202,7 +202,7 @@
         android:fontFamily="@font/roboto_bold"
         android:stateListAnimator="@null"
         android:text="다음"
-        android:textColor="@color/white"
+        android:textColor="@color/disableTxtColor"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
